fixed overflow

--- a/src/app-shared/css/zz.css
+++ b/src/app-shared/css/zz.css
@@ -40,7 +40,7 @@ pre code, #html, #markdown {
 
 #html, #markdown {
     line-height: 1.4;
-    padding: 5px 5px 0;
+    padding: 5px 5px 0 0;
 }
 
 #preview ol {
